--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
     "@iconify-json/iconoir": "^1.1.32",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@unocss/nuxt": "^0.57.1",
