--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nuxt/content": "^2.8.5",
     "@unocss/reset": "^0.57.1",
     "pinia": "^2.1.7",
-    "sitemap": "^7.1.1"
+    "sitemap": "^7.1.1",
+    "vue-stage-play": "^0.4.0",
+    "vue-surf": "^2.0.0"
   }
 }
