--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "@unocss/nuxt": "^0.57.1",
+    "@unocss/nuxt": "^0.59.4",
     "@unocss/preset-icons": "^0.57.1",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
@@ -25,14 +25,15 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "highlight.js": "^11.9.0",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.11.2",
+    "nuxt-og-image": "3.0.0-rc.52",
     "prettier": "^3.0.3",
     "sass": "^1.69.4",
     "typescript": "^5.2.2",
     "vue-tsc": "^1.8.19"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.5",
+    "@nuxt/content": "^2.12.1",
     "@unocss/reset": "^0.57.1",
     "pinia": "^2.1.7",
     "sitemap": "^7.1.1",
