--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-tsc": "^1.8.19"
   },
   "dependencies": {
+    "@giscus/vue": "^3.0.0",
     "@nuxt/content": "^2.12.1",
     "@unocss/reset": "^0.57.1",
     "pinia": "^2.1.7",
