--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
     "@iconify-json/iconoir": "^1.1.32",
+    "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^6.8.0",
@@ -25,8 +26,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "highlight.js": "^11.9.0",
-    "nuxt": "^3.11.2",
-    "nuxt-og-image": "3.0.0-rc.52",
+    "nuxt": "^3.13.2",
+    "nuxt-og-image": "^3.0.4",
     "prettier": "^3.0.3",
     "sass": "^1.69.4",
     "typescript": "^5.2.2",
