--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/robots": "^4.1.7",
     "@typescript-eslint/parser": "^6.8.0",
     "@unocss/nuxt": "^0.59.4",
     "@unocss/preset-icons": "^0.59.4",
