--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^6.8.0",
     "@unocss/nuxt": "^0.59.4",
     "@unocss/preset-icons": "^0.59.4",
+    "@unocss/transformer-directives": "^0.63.4",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "eslint": "^8.51.0",
